[package]
name = "rrect_physics"
version = "0.1.0"
edition = "2024"
authors = ["Team Injured Elbow"]
description = "An axis-aligned rounded rectangle physics implementation for the Bevy game engine"

[dependencies]
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_math = "0.17"
bevy_platform = { version = "0.17", optional = true }
bevy_reflect = { version = "0.17", optional = true }
bevy_time = { version = "0.17", optional = true }
bevy_transform = { version = "0.17", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["serialize", "singleplayer", "reflect"]
serialize = ["serde", "bevy_math/serialize"]
reflect = ["bevy_reflect", "bevy_math/bevy_reflect"]
singleplayer = ["render", "physics"]
multiplayer = ["client", "server"]
client = ["serialize", "render"]
server = ["serialize", "physics"]
render = ["bevy_transform"]
physics = ["bevy_platform", "bevy_time"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
